--- a/argocd-apps-structure/apps/orders/envs/prod-eu/deployment.yml
+++ b/argocd-apps-structure/apps/orders/envs/prod-eu/deployment.yml
@@ -10,6 +10,6 @@ spec:
       - name: webserver-simple
         env:
         - name: ENV
-          value: "prod-us"
+          value: "prod-eu"
         - name: GPU_ENABLED
           value: "1"
