--- a/preview-environments/pr-generator/pr-generator.yml
+++ b/preview-environments/pr-generator/pr-generator.yml
@@ -11,7 +11,9 @@ spec:
       github:
         owner: millerjn21
         repo: gitops-cert-level-3-examples
-      requeueAfterSeconds: 180
+        labels:
+        - preview-ready
+      requeueAfterSeconds: 60
   template:
     metadata:
       name: 'myapp-{{.branch}}'
